--- a/locales/templates/messages.pot
+++ b/locales/templates/messages.pot
@@ -5,15 +5,27 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: ru\n"
+"Language: locales\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgctxt "app"
+msgid "Поздравляем"
+msgstr ""
+
+msgctxt "content"
+msgid "документация"
+msgstr ""
 
 msgctxt "content"
 msgid "заголовок"
 msgstr ""
 
-msgctxt "app"
-msgid "Поздравляем"
+msgctxt "content"
+msgid "расширения"
+msgstr ""
+
+msgctxt "content"
+msgid "форум"
 msgstr ""
