--- a/locales/templates/messages.pot
+++ b/locales/templates/messages.pot
@@ -11,6 +11,12 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 msgctxt "app"
+msgid "Вы находитесь здесь уже {n, duration}"
+msg_plural ""
+magstr[0] ""
+magstr[1] ""
+
+msgctxt "app"
 msgid "Поздравляем"
 msgstr ""
 
