update template file

--- a/locales/templates/messages.pot
+++ b/locales/templates/messages.pot
@@ -13,8 +13,8 @@ msgstr ""
 msgctxt "app"
 msgid "Вы находитесь здесь уже {n, duration}"
 msgid_plural ""
-magstr[0] ""
-magstr[1] ""
+msgstr[0] ""
+msgstr[1] ""
 
 msgctxt "app"
 msgid "Поздравляем"
